[project]
name = "end-to-end-graphrag"
version = "0.1.0"
description = "Graph RAG indexing pipeline on Google Cloud (BigQuery, Gemini Batch API, Spanner Graph)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "google-cloud-bigquery",
    "google-cloud-spanner",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "splink",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphrag"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[project.scripts]
graphrag = "main:main"
